--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
     <link href="/dist/output.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>👋🏾 Zavion Sherman</title>
 </head>
 
 <body>
